Fix first section alignment and add whitespaces to presentation

--- a/style.css
+++ b/style.css
@@ -25,15 +25,14 @@ a,
 
 .first-section {
     flex-direction: column;
-    align-items: center;
+    align-items: space-between;
 }
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 16px;
-    width: 1000px;
+    padding: 16px;;
 }
 
 .header-logo {
@@ -44,9 +43,9 @@ a,
 
 .presentation {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     padding: 48px;
-    width: 1000px;
+    gap: 56px;
 }
 
 .presentation-text {
@@ -55,6 +54,7 @@ a,
     flex-wrap: wrap;
     flex: 1 1 auto;
     width: 500px;
+    gap: 16px;
 }
 
 .main-title {
